@@ -4,7 +4,8 @@
 	- updated translations
 	- fix a missing bindtextdomain
 	- fix a incorrect ngettext usage
-	- added quirks handler to fix nvidia-glx issue (#47433)
+	- added quirks handler to fix nvidia-glx issue (#47017)
+          Thanks to the amazing Kiko for helping improve this!
 2006-05-24: 
 	- if the initial "update()" fails, just exit, don't try
           to restore the old sources.list (nothing was modified yet)
